nohup.out
  File "/home/craigg/hack-overflow-slack-app/overflow-slack.py", line 51
    client.chat_postMessage(channel="C07SS5ED09K", thread_ts=message1["ts"], text=f"Question ID: {message1["ts"]}")
                                                                                                            ^^
SyntaxError: f-string: unmatched '['
Traceback (most recent call last):
  File "/home/craigg/hack-overflow-slack-app/overflow-slack.py", line 4, in <module>
    import pickledb
ModuleNotFoundError: No module named 'pickledb'
